[metadata]
name = hamgr
version = 0.8
author = Platform9 Systems, Inc
author-email = dev@platform9.com
description-file = README.md
license = Apache-2
home-page = https://github.com/platform9/hamgr
keywords=
	vmha
	hamgr
classifiers=
	Development Status :: 1 - Beta
	Topic :: Utilities
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages=
	hamgr
	shared

[entry-points]
hamgr = hamgr.server:main
