[metadata]
name = pf9-ha
summary = Platform9 cluster management service
author = dev@platform9.com
author-email = dev@platform9.com
home-page = http://www.platform9.com
classifier =
    Environment :: Platform9 OpenStack
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ha

[entry_points]
console_scripts =
    pf9-ha = ha.hostapp.pf9_ha:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
warnerrors = true
